--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@ show: 1
       <img width="200px" class="img-rounded" src="https://avatars.githubusercontent.com/u/5753959?v=4" />
   </td><td style="padding:10px">
     <center>
-    <h1>Yuntian Deng</h1>
-    <b>Young Investigator (Postdoc)</b>, AI2<br>
-    <b>Incoming Assistant Professor</b>, Waterloo CS (Starts Fall '24)<br>
-    <b>Faculty Affiliate</b>, Vector Institute (Starts Fall '24)<br>
-    PhD in CS, Harvard<br>
+    <h1>Richa Rastogi</h1>
+    <b>Computer Science PhD Student</b>, Cornell University<br>
     <span style="font-size:16px"><a href="cv/cv.comp.pdf">[CV]</a> <a href="https://scholar.google.com/citations?user=tk0e5lYAAAAJ&hl=en&oi=ao">[Google Scholar]</a> <a href="https://twitter.com/yuntiandeng">[Twitter]</a></span> </h1> <br>
 </center>
 
