--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ show: 1
     <center>
     <h1>Richa Rastogi</h1>
     <b>Computer Science PhD Student</b>, Cornell University<br>
-    <span style="font-size:16px"><a href="cv/cv.comp.pdf">[CV]</a> <a href="https://scholar.google.com/citations?user=tk0e5lYAAAAJ&hl=en&oi=ao">[Google Scholar]</a> <a href="https://twitter.com/yuntiandeng">[Twitter]</a></span> </h1> <br>
+    <span style="font-size:16px"><a href="cv/cv.comp.pdf">[CV]</a> <a href="https://scholar.google.com/citations?hl=en&user=hhy7tVIAAAAJ&view_op=list_works&sortby=pubdate">[Google Scholar]</a> <a href="https://twitter.com/Rich_Rast">[Twitter]</a></span> </h1> <br>
 </center>
 
       </td>
@@ -26,22 +26,9 @@ show: 1
 
 <p style="font-size: 16px">
 
-My research interests center on the intersection of natural language processing, machine learning, and multi-agent systems. Specifically, I am interested in exploring how large language models (LLMs) can communicate and collaborate to solve complex tasks together, and how they can be trained to specialize in different domains for a division of labor. My key focus areas include:
-
-<ul style="font-size: 16px">
-    <li><strong>Inducing Latent Language for Inter-LLM Communication:</strong> Developing methods to induce a specialized language for LLM communication, thereby enabling LLMs to leverage each other’ s expertise.</li>
-    <li><strong>Communication for Models Across Modalities:</strong> Extending Inter-LLM communication methods to enable collaboration among models that specialize in different modalities, such as language, image, and sensory data.</li>
-    <li><strong>Collaborative Training for Division of Labor among Models:</strong> Exploring ways to foster a division of labor among models, using communication as a tool to distribute knowledge among them during the training process.</li>
-</ul>
+My research interests center on responsble machine learning. Specifically, I am interested in fairness and bias in machine learning models and their long term dynamics. 
 
 </p>
-
-<p style="font-size: 16px">
-I also work on <a href="projects/">open-source</a> projects such as <a href="https://aclanthology.org/P17-4012/">OpenNMT</a>, <a href="https://im2markup.yuntiandeng.com/">Im2LaTeX</a>, <a href="https://huggingface.co/spaces/yuntian-deng/latex2im">LaTeX2Im</a>, and <a href="https://steganography.live">Steganography</a> to make my research efforts more readily available for developers and researchers.
-</p>
-
-<!--h4> Statements </h4>
-<span style="font-size: 16px"><a href="cv/research_statement.pdf">[Research Statement]</a> <a href="cv/teaching_statement_and_evaluations.pdf">[Teaching Statement]</a> <a href="cv/interdisciplinary_statement.pdf">[Interdisciplinary Statement]</a> <a href="cv/diversity_statement.pdf">[Diversity Statement]</a></span-->
 
 
 <h4> News </h4>
