add working paper

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@ show: 1
 {{project.title}}
 </a><br>
 {{project.abstract}}<br>
-{% if project.link %}<a class="icon pdf label label-info" href="{{project.link}}">github</a> {% endif %}
+<!-- {% if project.link %}<a class="icon pdf label label-info" href="{{project.link}}">github</a> {% endif %} -->
 {% if project.data %}<a class="icon pdf label label-success" href="{{project.data}}">data</a> {% endif %}
 {% if project.pdf %}<a class="icon pdf label label-info" href="{{project.pdf}}">pdf</a> {% endif %}
 {% if project.models %}<a class="icon slides label label-warning" href="{{project.models}}">models</a>{% endif %}
