--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ where I developed models and code that were deployed in production systems.
     </a><br>
     {{paper.authors}}.<br>
     {{paper.conference}} <br>
-    {% if paper.pdf %}<a class="icon pdf label label-info" href="{{paper.pdf}}">pdf</a> {% endif %}
+    <!-- {% if paper.pdf %}<a class="icon pdf label label-info" href="{{paper.pdf}}">pdf</a> {% endif %}
     {% if paper.models %}<a class="icon slides label label-warning" href="{{paper.models}}">models</a>{% endif %}
-    {% if paper.code %} <a class="icon slides label label-success label-warning" href="{{paper.code}}">code</a>{% endif %}
+    {% if paper.code %} <a class="icon slides label label-success label-warning" href="{{paper.code}}">code</a>{% endif %} -->
     <br>
     
     </td></tr>
