--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ where I developed models and code that were deployed in production systems.
         the uncertainty of the underlying relevance model differs between groups of options. -->
     </li>
     <br>
-    <li>Jan 20, 2023: Our paper, <a href="https://arxiv.org/abs/2205.11718">Semi-Parametric Inducing Point Networks and Neural Processes</a>, is accepted at ICLR 2023! In this paper, we introduce 
+    <li>Jan 20, 2023: Our paper, <a href="https://arxiv.org/abs/2205.11718">Semi-Parametric Inducing Point Networks and Neural Processes</a>, is accepted at ICLR 2023! We introduce 
         semi-parametric inducing point networks (SPIN), a general-purpose architecture that can query the training set at inference time in a compute-efficient manner. 
     </li>
     <br>
