--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ as well as understanding their long term dynamics  and feedback loops.  -->
 <p>
 <br>
 Prior to starting PhD, I spent several years working as a Data Scientist at Amazon Advertising and as a Controls Engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a>,
-where I developed models and code that were deployed in production systems. 
+where I developed models and code that were deployed in production systems and published a <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">patent</a>. 
 <!-- I also spent a year at the Stanford's biomedical  -->
 <!-- data science department working on machine learning methods for disparities in genomics. -->
 <br>
