--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@ where I developed models and code that were deployed in production systems and p
         semi-parametric inducing point networks (SPIN), a general-purpose architecture that can query the training set at inference time in a compute-efficient manner. 
     </li>
     <br>
+    <li>Aug 31, 2021: Patent, <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1"> filed on behalf of Amazon is granted. It describes a closed loop feedback model
+        for applying labels on packages with accurate positioning and online updates. 
+    </li>
+    <br>
 </ul>
 
 
