--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ show: 1
 
 <p style="font-size: 16px">
 
-Hi! I'am a Computer Science PhD Student at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am very fortunate to be advised by <a href="https://www.cs.cornell.edu/people/tj/">Professor Thorsten Joachims</a>. 
+Hi! I'am a Computer Science PhD Student at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am very fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. 
 <br>
 My research interests center on responsible machine learning in the context of rankings and selection processes. I am interested in developing methods and theory that can improve our understanding of the induced bias and fairness issues and their long term dynamics. 
 <!-- . Currently, my research focus is fairness and bias issues that arise with the use of machine learning models
