--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ where I developed models and code that were deployed in production systems and p
     </li>
     <br>
     <li>Aug 31, 2021: <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">Patent</a> filed on behalf of Amazon is granted by USPTO! It describes a closed loop feedback model
-        for applying labels on packages with accurate positioning and online updates. 
+        and dynamical system for applying labels on packages with accurate positioning and online updates. 
     </li>
     <br>
 </ul>
