--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ My research interests center on responsible machine learning in the context of r
 <!-- . Currently, my research focus is fairness and bias issues that arise with the use of machine learning models
 as well as understanding their long term dynamics  and feedback loops.  -->
 </p>
-<p>
+<p style="font-size: 16px">
 <br>
 Prior to starting PhD, I spent several years working as a Data Scientist at Amazon Advertising and as a Controls Engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a>,
 where I developed models and code that were deployed in production systems and published a <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">patent</a>. 
