--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ show: 1
 
 Hi! I'am a Computer Science PhD Student at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am very fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. 
 <br>
-My research interests center on responsible machine learning in the context of rankings and selection processes. I am interested in developing methods and theory that can improve our understanding of the induced bias and fairness issues and their long term dynamics. 
+My research interests center on responsible machine learning in the context of rankings and resource allocation. I am interested in developing methods and theory that can improve our understanding of the induced bias and fairness issues and their long term dynamics. 
 <!-- . Currently, my research focus is fairness and bias issues that arise with the use of machine learning models
 as well as understanding their long term dynamics  and feedback loops.  -->
 </p>
@@ -57,8 +57,8 @@ where I developed models and code that were deployed in production systems and p
         semi-parametric inducing point networks (SPIN), a general-purpose architecture that can query the training set at inference time in a compute-efficient manner. 
     </li>
     <br>
-    <li>Aug 31, 2021: Our <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">Patent</a> filed on behalf of Amazon is granted by USPTO! It describes a closed loop feedback model
-        and dynamical system for applying labels on packages with accurate positioning and online updates. 
+    <li>Aug 31, 2021: Our <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">Patent</a> filed on behalf of Amazon is granted by USPTO! It describes a closed loop feedback 
+        dynamical system for accurately positioning labels on moving packages with online updates. 
     </li>
     <br>
 </ul>
