--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ where I developed models and code that were deployed in production systems and p
     </li>
     <br>
     <li>Aug 31, 2021: Our <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">Patent</a> filed on behalf of Amazon is granted by USPTO! It describes a closed loop feedback 
-        dynamical system for accurately positioning labels on moving packages with online updates. 
+        dynamical system with online updates for accurately positioning labels on moving packages. 
     </li>
     <br>
 </ul>
