--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ show: 1
 
 Hi! I'am a Computer Science PhD Student at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am very fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. 
 <br>
-My research interests center on responsible machine learning in the context of rankings and resource allocation. I am interested in developing methods and theory that can improve our understanding of the induced bias and fairness issues and their long term dynamics. 
-<!-- . Currently, my research focus is fairness and bias issues that arise with the use of machine learning models
+My research interests center on responsible machine learning. I am interested in developing methods and theory for different aspects of responsible ML, including bias, fairness issues and their long term dynamics. 
+<!-- . in the context of rankings and resource allocation, Currently, my research focus is fairness and bias issues that arise with the use of machine learning models
 as well as understanding their long term dynamics  and feedback loops.  -->
 </p>
 <p>
