--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ show: 1
 Hi! I'am a Computer Science PhD Student at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am very fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. 
 <br>
 My research interests center on responsible machine learning. I am interested in developing methods and theory for different aspects of responsible ML, including bias, fairness issues and their long term dynamics. 
+<!-- My research interests center on responsible machine learning in the context of rankings and resource allocation. I am interested in developing methods and theory that can improve our understanding of the induced bias and fairness issues and their long term dynamics. -->
 <!-- . in the context of rankings and resource allocation, Currently, my research focus is fairness and bias issues that arise with the use of machine learning models
 as well as understanding their long term dynamics  and feedback loops.  -->
 </p>
@@ -41,7 +42,7 @@ where I developed models and code that were deployed in production systems and p
 <br>
 
 </p>
-
+If you're an undergrad or Master's student at Cornell and are interested in working with me, please don't hesitate to reach out! My email is rr568 at cornell dot edu.
 
 <h4> News </h4>
 <ul style="font-size: 16px">
