--- a/index.html
+++ b/index.html
@@ -28,16 +28,13 @@ show: 1
 
 Hi! I'am a Computer Science PhD Student at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am very fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. 
 <br>
-My research interests center on responsible machine learning. I am interested in developing methods and theory for different aspects of responsible ML, including bias, fairness issues and their long term dynamics. 
-<!-- My research interests center on responsible machine learning in the context of rankings and resource allocation. I am interested in developing methods and theory that can improve our understanding of the induced bias and fairness issues and their long term dynamics. -->
-<!-- . in the context of rankings and resource allocation, Currently, my research focus is fairness and bias issues that arise with the use of machine learning models
-as well as understanding their long term dynamics  and feedback loops.  -->
+My research interests center on responsible machine learning. I am interested in developing methods and theory for mitigating biases and unfairness due to uncertainties and dynamics that are ubiquitous in practical settings.
+
 <br>
 <br>
 Prior to starting PhD, I spent several years working as a Data Scientist at Amazon Advertising and as a Controls Engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a>,
 where I developed models and code that were deployed in production systems and published a <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">patent</a>. 
-<!-- I also spent a year at the Stanford's biomedical  -->
-<!-- data science department working on machine learning methods for disparities in genomics. -->
+
 <br>
 <br>
 If you're an undergrad or Master's student at Cornell and are interested in working with me, please don't hesitate to reach out! My email is rr568 at cornell dot edu.
@@ -49,8 +46,8 @@ If you're an undergrad or Master's student at Cornell and are interested in work
     </li>
     <br>
     <li>Aug 05, 2023: Presented our paper, <a href="https://arxiv.org/abs/2309.01610">Fair Ranking under Disparate Uncertainty</a>, as a <b> Spotlight (Oral) </b> at UAI workshop on <a href="https://sites.google.com/view/epi-workshop-uai-2023/schedule?authuser=0">Epistemic in AI</a> at CMU, Pittsburgh! 
-        <!-- In this work, we introduce Equal-Opportunity Ranking (EOR) as a new fairness criterion for ranking that provably corrects for the group unfairness induced when 
-        the uncertainty of the underlying relevance model differs between groups of options. -->
+        We introduce Equal-Opportunity Ranking (EOR) as a new fairness criterion for ranking that provably reduces the group unfairness induced when 
+        the uncertainty of the underlying relevance model differs between groups of candidates.
     </li>
     <br>
     <li>Jan 20, 2023: Our paper, <a href="https://arxiv.org/abs/2205.11718">Semi-Parametric Inducing Point Networks and Neural Processes</a>, is accepted at ICLR 2023! We introduce 
