--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@ show: 1
 
 Hi! I'am a Computer Science PhD Student at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am very fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. 
 <br>
-My research interests center on responsible machine learning. I am interested in developing methods and theory for mitigating biases and unfairness due to uncertainties and dynamics that are ubiquitous in practical settings.
+My research interests center on responsible machine learning. I am interested in developing methods and theory for mitigating biases and
+unfairness due to uncertainties and dynamics that are ubiquitous in practical settings. I am also very interested in understanding the
+dynamics of complex ecosystems like recommender systems.
 
 <br>
 <br>
-Prior to starting PhD, I spent several years working as a Data Scientist at Amazon Advertising and as a Controls Engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a>,
-where I developed models and code that were deployed in production systems and published a <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">patent</a>. 
+Prior to starting PhD, I spent several years working as a Data Scientist at Amazon Advertising and as a Controls Software Engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a>,
+where I developed software for deployment in production systems and published a <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">patent</a>. 
 
 <br>
 <br>
