--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@ show: 1
 
 Hi! I'am a Computer Science PhD Student at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am very fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. 
 <br>
-My research interests center on responsible machine learning. I am interested in developing methods and theory for mitigating biases and
-unfairness due to uncertainties and dynamics that are ubiquitous in practical settings. I am also very interested in understanding the
-dynamics of complex ecosystems like recommender systems.
+My research interests lie at the intersection of machine learning, optimization and algorithms. Specifically, I work on questions relating to dynamics, uncertainties and fairness in machine learning systems. 
 
 <br>
 <br>
