--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ show: 1
     <center>
     <h1>Richa Rastogi</h1>
     <!-- <b>Computer Science PhD Student</b>, Cornell University<br> -->
-    <span style="font-size:16px"><a href="https://github.com/RichRast">[Github]</a> <a href="https://scholar.google.com/citations?hl=en&user=hhy7tVIAAAAJ&view_op=list_works&sortby=pubdate">[Google Scholar]</a> <a href="https://twitter.com/Rich_Rast">[Twitter]</a></span> </h1> <br>
+    <span style="font-size:16px"><a href="https://github.com/RichRast">[Github]</a> <a href="https://scholar.google.com/citations?hl=en&user=hhy7tVIAAAAJ&view_op=list_works&sortby=pubdate">[Google Scholar]</a></span> </h1> <br>
 </center>
 
       </td>
