--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ If you're an undergrad or Master's student at Cornell and are interested in work
     <li>Aug 16, 2023: Selected to participate at <a href="https://www.chicagobooth.edu/research/center-for-applied-artificial-intelligence/opportunities/event---mlesi">Machine Learning in Economics Summer Institute '23 </a>, hosted by Chicago Booth. 
     </li>
     <br>
-    <li>Aug 05, 2023: Presented our paper, <a href="https://arxiv.org/abs/2309.01610">Fair Ranking under Disparate Uncertainty</a>, as a <b> Spotlight (Oral) </b> at UAI workshop on <a href="https://sites.google.com/view/epi-workshop-uai-2023/schedule?authuser=0">Epistemic in AI</a> at CMU, Pittsburgh! 
+    <li>Aug 05, 2023: Presented our paper, <a href="https://arxiv.org/abs/2309.01610">Fairness in Ranking under Disparate Uncertainty</a>, as a <b> Spotlight (Oral) </b> at UAI workshop on <a href="https://sites.google.com/view/epi-workshop-uai-2023/schedule?authuser=0">Epistemic AI</a> at CMU, Pittsburgh! 
         We introduce Equal-Opportunity Ranking (EOR) as a new fairness criterion for ranking that provably reduces the group unfairness induced when 
         the uncertainty of the underlying relevance model differs between groups of candidates.
     </li>
