--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ If you're an undergrad or Master's student at Cornell and are interested in work
           <a href="{{paper.pdf}}"><img width="600px" style="min-width:150px" src="{{paper.image}}"></a>
           {% else %}
           <a href="{{paper.pdf}}"><img height="75px" style="min-width:150px" src="https://avatar.tobi.sh/{{paper.title}}"></a>
-          {% if project.code %} <a class="icon slides label label-success label-warning" href="{{project.code}}">code</a>{% endif %}
+          {% if paper.code %} <a class="icon slides label label-success label-warning" href="{{paper.code}}">code</a>
           {% endif %}
     </td><td style="padding:10px">
     <a class="paper" href="{{paper.pdf}}">
@@ -107,7 +107,8 @@ If you're an undergrad or Master's student at Cornell and are interested in work
     <br>
     {{paper.authors}}.<br>
     {{paper.conference}} <br>
-    {{paper.code}} <br>
+    {% if paper.code %} <a class="icon slides label label-success label-warning" href="{{paper.code}}">code</a>
+    {% endif %}
     <br>
     
     </td></tr>
