--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@ If you're an undergrad or Master's student at Cornell and are interested in work
     <br>
     {{paper.authors}}.<br>
     {{paper.conference}} <br>
-    {% if paper.code %} <a class="icon slides label label-success label-warning" href="{{paper.code}}">code</a>
-    {% endif %}
+    {{paper.code}} <br>
     <br>
     
     </td></tr>
