--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@ My research interests lie at the intersection of machine learning, optimization 
 <br>
 <br>
 Prior to starting PhD, I spent several years working as a Data Scientist at Amazon Advertising and as a Controls Software Engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a>,
-where I developed software for deployment in production systems and published a <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">patent</a>. 
+where I developed software for deployment in production systems and published a <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">patent</a>. Prior to that, I completed a Masters in Industrial Engineering and Operations Research at <a href="https://www.isye.gatech.edu/">ISyE, Georgia Tech </a>
+and prior to that, a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi University</a>.
 
 <br>
 <br>
-If you're an undergrad or Master's student at Cornell and are interested in working with me, please don't hesitate to reach out! My email is rr568 at cornell dot edu.
+If you're an undergrad or Masters student at Cornell and are interested in working with me, please don't hesitate to reach out! My email is rr568 at cornell dot edu.
 <br>
 </p>
 <h4> News </h4>
