--- a/index.html
+++ b/index.html
@@ -98,13 +98,11 @@ If you're an undergrad or Masters student at Cornell and are interested in worki
     </table>
 
 <br>    
-<h4>Working Papers</h4>
+<!-- <h4>Working Papers</h4>
     
     <table>
     {% for paper in site.data.workingpapers.papers %}
-    <!-- <a class="paper" href="{{paper.pdf}}"> -->
     {{paper.title}}
-    <!-- </a> -->
     <br>
     {{paper.authors}}.<br>
     {{paper.conference}} <br>
@@ -117,4 +115,4 @@ If you're an undergrad or Masters student at Cornell and are interested in worki
     </table>
 
 
-<br>
+<br> -->
