--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ My research interests lie at the intersection of machine learning, optimization 
 <br>
 <br>
 Prior to starting PhD, I spent several years working as a Data Scientist at Amazon Advertising and as a Controls Software Engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a>,
-where I developed software for deployment in production systems and published a <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">patent</a>. Prior to that, I completed a Masters in Industrial Engineering and Operations Research at <a href="https://www.isye.gatech.edu/">ISyE, Georgia Tech </a>
-and prior to that, a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi University</a>.
+where I developed software for deployment in production systems. Prior to that, I completed a Masters in Industrial Engineering and Operations Research at <a href="https://www.isye.gatech.edu/">ISyE, Georgia Tech </a>
+and prior to that, a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi University, India</a>.
 
 <br>
 <br>
@@ -43,19 +43,19 @@ If you're an undergrad or Masters student at Cornell and are interested in worki
 </p>
 <h4> News </h4>
 <ul style="font-size: 16px">
-    <li>Aug 16, 2023: Selected to participate at <a href="https://www.chicagobooth.edu/research/center-for-applied-artificial-intelligence/opportunities/event---mlesi">Machine Learning in Economics Summer Institute '23 </a>, hosted by Chicago Booth. 
+    <li>June, 2024: Short version of our paper <a>MultiScale Policy Learning for Alignment with Long Term Objectives</a> is accepted at the ICML MHFAIA workshop. See you in Vienna!
     </li>
     <br>
-    <li>Aug 05, 2023: Presented our paper, <a href="https://arxiv.org/abs/2309.01610">Fairness in Ranking under Disparate Uncertainty</a>, as a <b> Spotlight (Oral) </b> at UAI workshop on <a href="https://sites.google.com/view/epi-workshop-uai-2023/schedule?authuser=0">Epistemic AI</a> at CMU, Pittsburgh! 
+    <li>Aug, 2023: Presented our paper, <a href="https://arxiv.org/abs/2309.01610">Fairness in Ranking under Disparate Uncertainty</a>, as a <b> Spotlight (Oral) </b> at UAI workshop on <a href="https://sites.google.com/view/epi-workshop-uai-2023/schedule?authuser=0">Epistemic AI</a> at CMU, Pittsburgh! 
         We introduce Equal-Opportunity Ranking (EOR) as a new fairness criterion for ranking that provably reduces the group unfairness induced when 
         the uncertainty of the underlying relevance model differs between groups of candidates.
     </li>
     <br>
-    <li>Jan 20, 2023: Our paper, <a href="https://arxiv.org/abs/2205.11718">Semi-Parametric Inducing Point Networks and Neural Processes</a>, is accepted at ICLR 2023! We introduce 
+    <li>Jan, 2023: Our paper, <a href="https://arxiv.org/abs/2205.11718">Semi-Parametric Inducing Point Networks and Neural Processes</a>, is accepted at ICLR 2023! We introduce 
         semi-parametric inducing point networks (SPIN), a general-purpose architecture that can query the training set at inference time in a compute-efficient manner. 
     </li>
     <br>
-    <li>Aug 31, 2021: Our <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">Patent</a> filed on behalf of Amazon is granted by USPTO! It describes a closed loop feedback 
+    <li>Aug, 2021: Our <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">Patent</a> filed on behalf of Amazon is granted by USPTO! It describes a closed loop feedback 
         dynamical system with online updates for accurately positioning labels on moving packages. 
     </li>
     <br>
