--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ If you're an undergrad or Masters student at Cornell and are interested in worki
 </p>
 <h4> News </h4>
 <ul style="font-size: 16px">
-    <li>June, 2024: Short version of our paper <a>MultiScale Policy Learning for Alignment with Long Term Objectives</a> is accepted at the ICML MHFAIA workshop. See you in Vienna!
+    <li>June, 2024: Short version of our paper <a>MultiScale Policy Learning for Alignment with Long Term Objectives</a> is accepted at the ICML Models of Human Feedback for AI Alignment workshop. See you in Vienna!
     </li>
     <br>
     <li>Aug, 2023: Presented our paper, <a href="https://arxiv.org/abs/2309.01610">Fairness in Ranking under Disparate Uncertainty</a>, as a <b> Spotlight (Oral) </b> at UAI workshop on <a href="https://sites.google.com/view/epi-workshop-uai-2023/schedule?authuser=0">Epistemic AI</a> at CMU, Pittsburgh! 
