--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@ If you're an undergrad or Masters student at Cornell and are interested in worki
 </p>
 <h4> News </h4>
 <ul style="font-size: 16px">
+    <li>July, 2024: Our paper, <a href="https://arxiv.org/abs/2309.01610">Fairness in Ranking under Disparate Uncertainty</a> is accepted at ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO'24). See you in Mexico!
+    </li>
+    <br>
     <li>June, 2024: Short version of our paper <a>MultiScale Policy Learning for Alignment with Long Term Objectives</a> is accepted at the ICML Models of Human Feedback for AI Alignment workshop. See you in Vienna!
     </li>
     <br>
