--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ If you're an undergrad or Masters student at Cornell and are interested in worki
     <li>July, 2024: Our paper, <a href="https://arxiv.org/abs/2309.01610">Fairness in Ranking under Disparate Uncertainty</a> is accepted at ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO'24). See you in Mexico!
     </li>
     <br>
-    <li>June, 2024: Short version of our paper <a>MultiScale Policy Learning for Alignment with Long Term Objectives</a> is accepted at the ICML Models of Human Feedback for AI Alignment workshop. See you in Vienna!
+    <li>June, 2024: Short version of our paper <a href="https://openreview.net/forum?id=QhXBXekwVm">MultiScale Policy Learning for Alignment with Long Term Objectives</a> is accepted at the ICML Models of Human Feedback for AI Alignment workshop. See you in Vienna!
     </li>
     <br>
     <li>Aug, 2023: Presented our paper, <a href="https://arxiv.org/abs/2309.01610">Fairness in Ranking under Disparate Uncertainty</a>, as a <b> Spotlight (Oral) </b> at UAI workshop on <a href="https://sites.google.com/view/epi-workshop-uai-2023/schedule?authuser=0">Epistemic AI</a> at CMU, Pittsburgh! 
