--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ If you're an undergrad or Masters student at Cornell and are interested in worki
     </a><br>
     {{paper.authors}}.<br>
     {{paper.conference}} <br>
-    {% if paper.code %} <a class="icon slides label label-success label-warning" href="{{paper.code}}">code</a>{% endif %} <br>
-    {% if paper.poster %} <a class="icon slides label label-success label-warning" href="{{paper.poster}}">code</a>{% endif %} <br>
+    {% if paper.code %} <a class="icon slides label label-success label-warning" href="{{paper.code}}">code</a>{% endif %} 
+    {% if paper.poster %} <a class="icon slides label label-success label-warning" href="{{paper.poster}}">poster</a>{% endif %} <br>
     <!-- {% if paper.pdf %}<a class="icon pdf label label-info" href="{{paper.pdf}}">pdf</a> {% endif %}
     {% if paper.models %}<a class="icon slides label label-warning" href="{{paper.models}}">models</a>{% endif %}
     -->
