--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ If you're an undergrad or Masters student at Cornell and are interested in worki
         the uncertainty of the underlying relevance model differs between groups of candidates.
     </li>
     <br>
-    <li>Jan, 2023: Our paper, <a href="https://arxiv.org/abs/2205.11718">Semi-Parametric Inducing Point Networks and Neural Processes</a>, is accepted at ICLR 2023! We introduce 
+    <li>Jan, 2023: Our paper, <a href="https://arxiv.org/abs/2205.11718">Semi-Parametric Inducing Point Networks and Neural Processes</a>, is accepted at International Conference on Learning Representations (ICLR '23)! We introduce 
         semi-parametric inducing point networks (SPIN), a general-purpose architecture that can query the training set at inference time in a compute-efficient manner. 
     </li>
     <br>
