--- a/index.html
+++ b/index.html
@@ -43,25 +43,28 @@ If you're an undergrad or Masters student at Cornell and are interested in worki
 </p>
 <h4> News </h4>
 <ul style="font-size: 16px">
-    <li>July, 2024: Our paper, <a href="https://arxiv.org/abs/2309.01610">Fairness in Ranking under Disparate Uncertainty</a> is accepted at ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO'24). See you in Mexico!
+    <li>08/24: Our paper, <a href="https://arxiv.org/abs/2309.01610">Fairness in Ranking under Disparate Uncertainty</a> is accepted at ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO'24). See you in Mexico!
     </li>
-    <br>
-    <li>June, 2024: Short version of our paper <a href="https://openreview.net/forum?id=QhXBXekwVm">MultiScale Policy Learning for Alignment with Long Term Objectives</a> is accepted at the ICML Models of Human Feedback for AI Alignment workshop. See you in Vienna!
+    <!-- <br> -->
+    <li>07/24: I will be at the <a  href="https://ghc.anitab.org/">Grace Hopper Celebration of Women in Computing</a>in Philadelphia. Come stop by the Cornell booth to chat !
     </li>
-    <br>
-    <li>Aug, 2023: Presented our paper, <a href="https://arxiv.org/abs/2309.01610">Fairness in Ranking under Disparate Uncertainty</a>, as a <b> Spotlight (Oral) </b> at UAI workshop on <a href="https://sites.google.com/view/epi-workshop-uai-2023/schedule?authuser=0">Epistemic AI</a> at CMU, Pittsburgh! 
+    <!-- <br> -->
+    <li>06/24: Short version of our paper <a href="https://openreview.net/forum?id=QhXBXekwVm">MultiScale Policy Learning for Alignment with Long Term Objectives</a> is accepted at the ICML Models of Human Feedback for AI Alignment workshop. See you in Vienna!
+    </li>
+    <!-- <br> -->
+    <li>08/23: Presented our paper, <a href="https://arxiv.org/abs/2309.01610">Fairness in Ranking under Disparate Uncertainty</a>, as a <b> Spotlight (Oral) </b> at UAI workshop on <a href="https://sites.google.com/view/epi-workshop-uai-2023/schedule?authuser=0">Epistemic AI</a> at CMU, Pittsburgh! 
         We introduce Equal-Opportunity Ranking (EOR) as a new fairness criterion for ranking that provably reduces the group unfairness induced when 
         the uncertainty of the underlying relevance model differs between groups of candidates.
     </li>
-    <br>
-    <li>Jan, 2023: Our paper, <a href="https://arxiv.org/abs/2205.11718">Semi-Parametric Inducing Point Networks and Neural Processes</a>, is accepted at International Conference on Learning Representations (ICLR '23)! We introduce 
+    <!-- <br> -->
+    <li>01/23: Our paper, <a href="https://arxiv.org/abs/2205.11718">Semi-Parametric Inducing Point Networks and Neural Processes</a>, is accepted at International Conference on Learning Representations (ICLR '23)! We introduce 
         semi-parametric inducing point networks (SPIN), a general-purpose architecture that can query the training set at inference time in a compute-efficient manner. 
     </li>
-    <br>
-    <li>Aug, 2021: Our <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">Patent</a> filed on behalf of Amazon is granted by USPTO! It describes a closed loop feedback 
+    <!-- <br> -->
+    <li>08/21: Our <a href="https://patents.google.com/patent/US11104469B1/en?oq=US11104469B1">Patent</a> filed on behalf of Amazon is granted by USPTO! It describes a closed loop feedback 
         dynamical system with online updates for accurately positioning labels on moving packages. 
     </li>
-    <br>
+    <!-- <br> -->
 </ul>
 
 
