--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ My research interests lie at the intersection of machine learning, optimization 
 <br>
 Prior to starting PhD, I spent several years working as a Data Scientist at Amazon Advertising and as a Controls Software Engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a>,
 where I developed software for deployment in production systems. Prior to that, I completed a Masters in Industrial Engineering and Operations Research at <a href="https://www.isye.gatech.edu/">ISyE, Georgia Tech </a>
-and prior to that, a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi University, India</a>.
+and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi University, India</a>.
 
 <br>
 
