--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ show: 1
 
 <p style="font-size: 16px">
 
-Hi! I'am a Computer Science PhD Student at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am very fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. 
+Hi! I'am a Computer Science PhD Candidate at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am very fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. 
 <br>
 My research interests lie at the intersection of machine learning, optimization and algorithms. Specifically, I work on questions relating to dynamics, uncertainties and fairness in machine learning systems. 
 
