--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi Univ
     {{paper.tldr}} <br>
     {% if paper.code %} <a class="icon slides label label-success label-warning" href="{{paper.code}}">code</a>{% endif %} 
     {% if paper.poster %} <a class="icon slides label label-success label-warning" href="{{paper.poster}}">poster</a>{% endif %} <br>
+    {% if paper.bibtex %} <a class="icon slides label label-success label-warning" href="{{paper.bibtex}}">bibtex</a>{% endif %} <br>
     <!-- {% if paper.pdf %}<a class="icon pdf label label-info" href="{{paper.pdf}}">pdf</a> {% endif %}
     {% if paper.models %}<a class="icon slides label label-warning" href="{{paper.models}}">models</a>{% endif %}
     -->
