--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@ and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi Univ
     
       <tr><td style="padding:10px">
           {% if paper.image %}
-          <a href="{{paper.pdf}}"><img width="600px" style="min-width:150px" src="{{paper.image}}"></a>
+          {% if forloop.index == 1 %}
+          <a href="{{paper.pdf}}"><img width="400px" style="min-width:150px" src="{{paper.image}}"></a>
+          {% else %}
+          <a href="{{paper.pdf}}"><img width="700px" style="min-width:150px" src="{{paper.image}}"></a>
+          {% endif %}
           {% else %}
           <a href="{{paper.pdf}}"><img height="75px" style="min-width:150px" src="https://avatar.tobi.sh/{{paper.title}}"></a>
           {% endif %}
