--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi Univ
       <tr><td style="padding:10px">
           {% if paper.image %}
           {% if forloop.index == 1 %}
-          <a href="{{paper.pdf}}"><img height="200px" style="min-width:150px" src="{{paper.image}}"></a>
+          <a href="{{paper.pdf}}"><img height="200px" width="200px" style="min-width:150px" src="{{paper.image}}"></a>
           {% else %}
-          <a href="{{paper.pdf}}"><img width="800px" style="min-width:150px" src="{{paper.image}}"></a>
+          <a href="{{paper.pdf}}"><img width="800px" height="200px" style="min-width:150px" src="{{paper.image}}"></a>
           {% endif %}
           {% else %}
           <a href="{{paper.pdf}}"><img height="80px" style="min-width:150px" src="https://avatar.tobi.sh/{{paper.title}}"></a>
