--- a/index.html
+++ b/index.html
@@ -58,16 +58,23 @@ and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi Univ
           <a href="{{paper.pdf}}"><img height="80px" style="min-width:150px" src="https://avatar.tobi.sh/{{paper.title}}"></a>
           {% endif %}
     </td><td style="padding:10px">
-    <a class="paper" href="{{paper.pdf}}">
+    <a class="paper" style="color: #0e56b5" href="{{paper.pdf}}">
     {{paper.title}}
     </a><br>
     {{paper.authors}}.<br>
     <span style="color: #B25959;">{{paper.conference}}</span> <br>
     {{paper.tldr}} <br>
-    {% if paper.code %} <a class="icon slides label label-success label-warning" href="{{paper.code}}">code</a>{% endif %} 
-    {% if paper.poster %} <a class="icon slides label label-success label-warning" href="{{paper.poster}}">poster</a>{% endif %}
-    {% if paper.slides %} <a class="icon slides label label-success label-warning" href="{{paper.slides}}">slides</a>{% endif %}
-    {% if paper.bibtex %} <a class="icon slides label label-success label-warning" href="{{paper.bibtex}}">bibtex</a>{% endif %} <br>
+    <span style="font-size: 14px">
+        {% if paper.code %}<a style="color: #0e56b5" href="{{paper.code}}">code</a>{% endif %}
+        {% if paper.code and paper.poster %} | {% endif %}
+        {% if paper.poster %}<a style="color: #0e56b5" href="{{paper.poster}}">poster</a>{% endif %}
+        {% if paper.poster and paper.slides %} | {% endif %}
+        {% if paper.slides %}<a style="color: #0e56b5" href="{{paper.slides}}">slides</a>{% endif %}
+        {% if paper.slides and paper.bibtex %} | {% endif %}
+        {% if paper.bibtex %}<a style="color: #0e56b5" href="data:text/plain;charset=utf-8,{{paper.bibtex | url_encode}}">bibtex</a>{% endif %}
+        {% if paper.bibtex and paper.news %} | {% endif %}
+        {% if paper.news %}<a style="color: #0e56b5" href="{{paper.news}}">Chronicle News</a>{% endif %}
+    </span><br>
     <!-- {% if paper.pdf %}<a class="icon pdf label label-info" href="{{paper.pdf}}">pdf</a> {% endif %}
     {% if paper.models %}<a class="icon slides label label-warning" href="{{paper.models}}">models</a>{% endif %}
     -->
