--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@ and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi Univ
     {{paper.tldr}} <br>
     <span style="font-size: 14px">
         {% if paper.code %}<a style="color: #0e56b5" href="{{paper.code}}">code</a>{% endif %}
-        {% if paper.code and paper.poster %} | {% endif %}
-        {% if paper.poster %}<a style="color: #0e56b5" href="{{paper.poster}}">poster</a>{% endif %}
-        {% if paper.poster and paper.slides %} | {% endif %}
-        {% if paper.slides %}<a style="color: #0e56b5" href="{{paper.slides}}">slides</a>{% endif %}
+        {% if paper.code and paper.slides %} | {% endif %}
+        {% if paper.slides %}<a style="color: #2a7ae2" href="{{paper.slides}}">slides</a>{% endif %}
         {% if paper.slides and paper.bibtex %} | {% endif %}
-        {% if paper.bibtex %}<a style="color: #0e56b5" href="data:text/plain;charset=utf-8,{{paper.bibtex | url_encode}}">bibtex</a>{% endif %}
-        {% if paper.bibtex and paper.news %} | {% endif %}
+        {% if paper.bibtex %}<a style="color: #2a7ae2" href="data:text/plain;charset=utf-8,{{paper.bibtex | strip | url_encode}}">bibtex</a>{% endif %}
+        {% if paper.bibtex and paper.poster %} | {% endif %}
+        {% if paper.poster %}<a style="color: #0e56b5" href="{{paper.poster}}">poster</a>{% endif %}
+        {% if paper.poster and paper.news %} | {% endif %}
         {% if paper.news %}<a style="color: #0e56b5" href="{{paper.news}}">Chronicle News</a>{% endif %}
     </span><br>
     <!-- {% if paper.pdf %}<a class="icon pdf label label-info" href="{{paper.pdf}}">pdf</a> {% endif %}
