--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi Univ
       <tr><td style="padding:10px">
           {% if paper.image %}
           {% if forloop.index == 1 %}
-          <a href="{{paper.pdf}}"><img height="180px" style="min-width:150px" src="{{paper.image}}"></a>
+          <a href="{{paper.pdf}}"><img height="200px" style="min-width:150px" src="{{paper.image}}"></a>
           {% else %}
           <a href="{{paper.pdf}}"><img width="800px" style="min-width:150px" src="{{paper.image}}"></a>
           {% endif %}
@@ -68,9 +68,9 @@ and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi Univ
         {% if paper.code %}<a style="color: #0e56b5" href="{{paper.code}}">code</a>{% endif %}
         {% if paper.code and paper.slides %} | {% endif %}
         {% if paper.slides %}<a style="color: #2a7ae2" href="{{paper.slides}}">slides</a>{% endif %}
-        {% if paper.slides and paper.bibtex %} | {% endif %}
-        {% if paper.bibtex %}<a style="color: #2a7ae2" href="data:text/plain;charset=utf-8,{{paper.bibtex | strip | url_encode}}">bibtex</a>{% endif %}
-        {% if paper.bibtex and paper.poster %} | {% endif %}
+        {% if paper.slides and paper.bibtex != blank %} | {% endif %}
+        {% if paper.bibtex != blank %}<a style="color: #2a7ae2" href="data:text/plain;charset=utf-8;filename=citation.bib,{{paper.bibtex | strip | url_encode}}" download="citation.bib">bibtex</a>{% endif %}
+        {% if paper.bibtex != blank and paper.poster %} | {% endif %}
         {% if paper.poster %}<a style="color: #0e56b5" href="{{paper.poster}}">poster</a>{% endif %}
         {% if paper.poster and paper.news %} | {% endif %}
         {% if paper.news %}<a style="color: #0e56b5" href="{{paper.news}}">Chronicle News</a>{% endif %}
