--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi Univ
     <span style="font-size: 14px">
         {% if paper.code %}<a style="color: #0e56b5" href="{{paper.code}}">code</a>{% endif %}
         {% if paper.code and paper.slides %} | {% endif %}
-        {% if paper.slides %}<a style="color: #2a7ae2" href="{{paper.slides}}">slides</a>{% endif %}
+        {% if paper.slides %}<a style="color: #0e56b5" href="{{paper.slides}}">slides</a>{% endif %}
         {% if paper.slides and paper.bibtex != blank %} | {% endif %}
-        {% if paper.bibtex %}
-            <a style="color: #2a7ae2" 
-               href="data:text/plain;charset=utf-8;base64,{{paper.bibtex | strip | base64_encode}}" 
+        {% if paper.bibtex != blank %}
+            <a style="color: #0e56b5" 
+               href="data:text/plain;base64,{{paper.bibtex | strip | base64_encode}}" 
                download="citation.bib">bibtex</a>
         {% endif %}
         {% if paper.bibtex and paper.poster %} | {% endif %}
