--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ show: 1
 Hi! I'am a Computer Science PhD Candidate at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am very fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. 
 <br>
 My research interests broadly lie in the area of learning from feedback in interactive systems ranging from recommender to text generation systems. 
-My recent work introduces a framework to tractably align these systems with long term objectives. I am also interested in bias and fairness issues in these systems, and have previously worked on fairness in ranking.
+My recent work introduces a framework to tractably align these systems with long term objectives. I am also interested in bias and fairness issues in these systems, and previously worked on fairness in ranking.
 
 <br>
 <br>
