--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ My recent work introduces a policy learning framework to tractably align these s
 
 <br>
 <br>
-Prior to starting PhD, I spent several years working as a Controls Software Engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a> and other companies. Prior to that, I completed a Masters in Industrial Engineering and Operations Research at <a href="https://www.isye.gatech.edu/">ISyE, Georgia Tech </a>
+Prior to starting PhD, I spent several years working as a controls engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a> and other companies. Prior to that, I completed a Masters in Industrial Engineering and Operations Research at <a href="https://www.isye.gatech.edu/">ISyE, Georgia Tech </a>
 and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi University, India</a>.
 
 <br>
