--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Projects
+title: Other
 weight: 3
 permalink: /projects/
-show: 1
+show: 0
 ---
 <h3>Other Projects</h3>
 
