--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,11 @@
 ---
 layout: page
-title: Other
-weight: 3
+title: Other Stuff
+weight: 2
 permalink: /projects/
-show: 0
+show: 1
 ---
-<h3>Other Projects</h3>
+<!-- <h3>Other Projects</h3> -->
 
 
 <p>
