--- a/papers.html
+++ b/papers.html
@@ -2,8 +2,9 @@
 layout: page
 title: Publications
 permalink: /papers/
-<!-- weight: 2 -->
+weight: 2
 show: false
+published: false
 ---
 
 <h3>Selected Papers</h3>
