--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ show: 1
   </td><td style="padding:10px">
     <center>
     <h1>Richa Rastogi</h1>
-    <span style="font-size:16px"><a href="https://scholar.google.com/citations?hl=en&user=hhy7tVIAAAAJ&view_op=list_works&sortby=pubdate">[Google Scholar]</a></span> </h1> <br>
+    <span style="font-size:16px"><a href="https://scholar.google.com/citations?hl=en&user=DM6HlJ4AAAAJ&view_op=list_works&sortby=pubdate">[Google Scholar]</a></span> </h1> <br>
 </center>
 
       </td>
