--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi Univ
         {% if paper.bibtex and paper.poster %} | {% endif %}
         {% if paper.poster %}<a style="color: #0e56b5" href="{{paper.poster}}">poster</a>{% endif %}
         {% if paper.poster and paper.news %} | {% endif %}
-        {% if paper.news %}<a style="color: #0e56b5" href="{{paper.news}}">Chronicle News</a>{% endif %}
+        {% if paper.news %}<a style="color: #B25959" href="{{paper.news}}"> Media: Cornell News</a>{% endif %}
     </span><br>
     <!-- {% if paper.pdf %}<a class="icon pdf label label-info" href="{{paper.pdf}}">pdf</a> {% endif %}
     {% if paper.models %}<a class="icon slides label label-warning" href="{{paper.models}}">models</a>{% endif %}
