--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ show: 1
   </td><td style="padding:10px">
     <center>
     <h1>Richa Rastogi</h1>
-    <span style="font-size:16px"><a href="https://scholar.google.com/citations?hl=en&user=hhy7tVIAAAAJ&view_op=list_works&sortby=pubdate">[Google Scholar]</a></span> </h1> <br>
+    <span style="font-size:16px"><a href="mailto:rr568@cornell.edu">rr568@cornell.edu</a></span> </h1> <br>
 </center>
 
       </td>
@@ -41,7 +41,7 @@ and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi Univ
 
 
 
-<h4>Selected Works</h4>
+<h4>Selected Works <span style="font-size: 12px">(complete works at <a href="https://scholar.google.com/citations?hl=en&user=hhy7tVIAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>)</span></h4>
 
 <table>
     {% for paper in site.data.papers.papers %}
