--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ show: 1
   </td><td style="padding:10px">
     <center>
     <h1>Richa Rastogi</h1>
-    <span style="font-size:16px"><a href="mailto:rr568@cornell.edu">rr568@cornell.edu</a></span> </h1> <br>
+    <span style="font-size:16px"><a href="mailto:rr568@cornell.edu">[Email]</a></span> </h1> <br>
 </center>
 
       </td>
