--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@ show: 1
 
 Hi! I'am a Computer Science PhD Candidate at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. 
 <br>
-My research interests lie in the area of learning from feedback in interactive systems ranging from recommender to text generation systems. 
+My research interests lie in the area of learning from feedback in interactive systems ranging from recommender systems to LLMs. 
 My recent work introduces a policy learning framework to tractably align these systems with long-term objectives.
-<!-- I am also interested in bias and fairness issues in these systems, and have worked on fairness in ranking. -->
-I am also interested in the study of bias, inequities and uncertainty in algorithmic decision-making systems.
+I am also interested in the study of bias, fairness and uncertainty in these systems.
 
 Prior to starting PhD, I spent several years working as a controls engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a> and other companies. Prior to that, I completed a Masters in Industrial Engineering and Operations Research at <a href="https://www.isye.gatech.edu/">ISyE, Georgia Tech </a>
 and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi University, India</a>.
