--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@ show: 1
 
 <p style="font-size: 16px">
 
-Hi! I'am a Computer Science PhD Candidate at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>. 
+Hi! I'am a Computer Science PhD Candidate at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>.
 <br>
-My research interests lie in the area of learning from feedback in interactive systems ranging from recommender systems to LLMs. 
-My recent work introduces a policy learning framework to tractably align these systems with long-term objectives.
-I am also interested in the study of bias, fairness and uncertainty in these systems.
-
-Prior to starting PhD, I spent several years working as a controls engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a> and other companies. Prior to that, I completed a Masters in Industrial Engineering and Operations Research at <a href="https://www.isye.gatech.edu/">ISyE, Georgia Tech </a>
-and a Bachelors of Engineering at <a href="http://nsut.ac.in/en/home">Delhi University, India</a>.
-
+My research interests broadly lie in the area of learning from feedback in interactive systems, ranging from recommender systems to LLMs. 
+I am interested in studying, building, and developing principled methods that tackle real-world complexities, such as sparse rewards, optimizing over long horizons, computational inefficiency, uncertainties, etc. As a result, I work at the intersection of machine learning, reinforcement learning, and optimization. 
+<br>
+Prior to starting PhD, I enjoyed several years working as a controls engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a> and other companies. Prior to that, I hung out at Georgia Tech, working towards a Masters in Industrial Engineering and Operations Research <a href="https://www.isye.gatech.edu/">ISyE</a>.
+I hold a Bachelors of Engineering from <a href="http://nsut.ac.in/en/home">Delhi University, India</a>.
 <br>
 
 <br>
