--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ show: 1
 Hi! I'am a Computer Science PhD Candidate at <a href="https://www.cs.cornell.edu/">Cornell University </a> and I'am fortunate to be advised by Professor <a href="https://www.cs.cornell.edu/people/tj/">Thorsten Joachims</a>.
 <br>
 My research interests broadly lie in the area of learning from feedback in interactive systems, ranging from recommender systems to LLMs. 
-I am interested in studying, building, and developing principled methods that tackle real-world complexities, such as sparse rewards, optimizing over long horizons, computational inefficiency, uncertainties, etc. As a result, I work at the intersection of machine learning, reinforcement learning, and optimization. 
+I am interested in studying, building, and developing principled methods that tackle real-world complexities, such as sparse rewards, long horizons, computational inefficiency, uncertainties, etc. As a result, I work at the intersection of machine learning, reinforcement learning, and optimization.
 <br>
 Prior to starting PhD, I enjoyed several years working as a controls engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a> and other companies. Prior to that, I hung out at Georgia Tech, working towards a Masters in Industrial Engineering and Operations Research <a href="https://www.isye.gatech.edu/">ISyE</a>.
 I hold a Bachelors of Engineering from <a href="http://nsut.ac.in/en/home">Delhi University, India</a>.
