--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ Hi! I'am a Computer Science PhD Candidate at <a href="https://www.cs.cornell.edu
 My research interests broadly lie in the area of learning from feedback in interactive systems, ranging from recommender systems to LLMs. 
 I am interested in studying, building, and developing principled methods that tackle real-world complexities, such as sparse rewards, long horizons, computational inefficiency, uncertainties, etc. As a result, I work at the intersection of machine learning, reinforcement learning, and optimization.
 <br>
-Prior to starting PhD, I enjoyed several years working as a controls engineer at <a href="https://youtu.be/3bdRKaodLK8?si=6W3vaqLnhWNxdbfP">Amazon Fullfillment Technologies</a> and other companies. Prior to that, I hung out at Georgia Tech, working towards a Masters in Industrial Engineering and Operations Research <a href="https://www.isye.gatech.edu/">ISyE</a>.
-I hold a Bachelors of Engineering from <a href="http://nsut.ac.in/en/home">Delhi University, India</a>.
+Prior to starting PhD, I enjoyed several years working as a controls engineer at Amazon. Prior to that, I hung out at Georgia Tech, working towards a Masters in Industrial Engineering and Operations Research.
+I hold a Bachelors of Engineering from Delhi University, India.
 <br>
 
 <br>
